[metadata]
name = proto_litfin
version = 0.0.1
url = https://github.com/FridayFawkes/proto_litfin
author = FridayFawkes
author_email = "FridayFawkes" <fawkes02012@gmail.com>
description = Prototype for Litfin package.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
# install_requires =

[options.packages.find]
where = src
exclude =
    test*
