[metadata]
name = proto_litfin
version = 0.0.1
url = https://github.com/FridayFawkes/proto_litfin
author = FridayFawkes
author_email = "FridayFawkes" <fawkes02012@gmail.com>
description = Prototype for Litfin package.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires = 
    pandas>=1.4.2,<2
    yfinance>=0.1.70,<1
    plotly>=5.8.2,<6
    investpy>=0.0.4,<1
    numpy>=1.22.4,<2
    requests>=2.28.0,<3
    pyjstat>=2.2.1,<3
    seaborn>=0.11.2,<1
    matplotlib>=3.5.2,<4
    IPython>=8.4.0,<9

[options.packages.find]
where = src
exclude =
    test*
